# CrystalEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  shadertoolsconfig.json
Editor/: CMakeLists.txt
Editor/Assets/: CMakeLists.txt
Editor/Assets/Images/: GridPattern.afphoto  GridPattern.afphoto~lock~
Editor/Config/: CMakeLists.txt
Editor/Source/AssetProcessor/: CMakeLists.txt
Editor/Source/CrystalEditor/: CMakeLists.txt  crystaleditor_private_files.cmake
Editor/Source/DEPRECATED_EditorCore/: editorcore_private_files.cmake  editorcore_public_files.cmake
Editor/Source/EditorCore/: CMakeLists.txt  editorcore_private_files.cmake  editorcore_public_files.cmake
Editor/Source/EditorLauncher/: CMakeLists.txt  appicon.aps  editorlauncher_private_files.cmake
Editor/Source/EditorSystem/: CMakeLists.txt
Editor/Source/EditorWidgets/: CMakeLists.txt
Editor/Source/ProjectBrowser/: CMakeLists.txt  projectbrowser_source_files.cmake
Editor/Source/QtComponents/: CMakeLists.txt  qtcomponents_public_files.cmake
Editor/Styles/: AboutWindowStyle.css  CMakeLists.txt  ColorPickerStyle.css  DetailsWindowStyle.css  EditorStyle.css  ProjectBrowserStyle.css  ProjectSettingsStyle.css
Engine/: CMakeLists.txt
Engine/Assets/: CMakeLists.txt  asset_files.cmake
Engine/Assets/Meshes/: Cube.fbx
Engine/Assets/Shaders/: Depth.shader  Opaque.shader  Test.shader
Engine/Config/: CMakeLists.txt  DefaultPlugins.ini
Engine/Plugins/: CMakeLists.txt
Engine/Plugins/NuklearMetalRHI/: CMakeLists.txt
Engine/Plugins/NuklearRHI/: CMakeLists.txt
Engine/Plugins/NuklearVulkanRHI/: CMakeLists.txt
Engine/Resources/: CMakeLists.txt
Engine/Shaders/: CDFConditionalInverse.hlsl  CDFMarginalInverse.hlsl  CMakeLists.txt  Depth.hlsl  Depth.hlsli  Depth.vert.as  Depth.vert.spv  EnvMapConvolution.hlsl  EnvironmentMapCS.hlsl  Equirectangular.hlsl  EquirectangularCS.hlsl  ErrorShader.glsl  ErrorShader.hlsl  ErrorShaderVert.spv  ErrorVert.spv  FlatConvolution.hlsl  FusionShader.hlsl  FusionShader.sh  FusionShader2.hlsl  Grayscale.hlsl  ImageColumnAverage.hlsl  ImageRowAverage.hlsl  Macros.hlsl  NewTestFrag.spv  NewTestShader.hlsl  NewTestVert.spv  Opaque.frag.spv  Opaque.hlsl  PDFDivision.hlsl  PerViewData.hlsl  SandboxShaders.sh  ShaderLibrary.hlsl  ShaderLibrary.hlsli  Skybox.hlsl  Test.azsl  Test.frag.spv  Test.hlsl  Test.shader  Test.vert.spv  TestPass.pass  (+3 more)
Engine/Shaders/Core/: Gamma.hlsli  LightData.hlsli  Lighting.hlsl  Lighting.hlsli  Macros.hlsl  Macros.hlsli  ObjectData.hlsl  ObjectData.hlsli  SceneData.hlsl  SceneData.hlsli  Utils.hlsli  ViewData.hlsl  ViewData.hlsli
Engine/Source/AutoRTTI/: CMakeLists.txt  autortti_source_files.cmake
Engine/Source/Core/: CMakeLists.txt  core_private_files.cmake  core_public_files.cmake
Engine/Source/CoreApplication/: CMakeLists.txt  coreapplication_private_files.cmake
Engine/Source/CoreGUI/: CMakeLists.txt
Engine/Source/CoreInput/: CMakeLists.txt
Engine/Source/CoreMedia/: CMakeLists.txt
Engine/Source/CoreMesh/: CMakeLists.txt
Engine/Source/CoreRHI/: CMakeLists.txt
Engine/Source/CoreRPI/: CMakeLists.txt
Engine/Source/CoreSettings/: CMakeLists.txt
Engine/Source/CoreShader/: CMakeLists.txt
Engine/Source/CoreTracy/: CMakeLists.txt
Engine/Source/CoreWidgets/: CMakeLists.txt
Engine/Source/CoreWidgets_Backup/: CButton.cpp  CDockContainer.h  CSelectableGroup.cpp  CSelectableGroup.h  CSelectableWidget.cpp  CTabView.cpp  CTableView.cpp  WidgetManager.h
Engine/Source/CrystalWidgets/: CMakeLists.txt
Engine/Source/Fusion/: CMakeLists.txt  fusion_private_files.cmake
Engine/Source/FusionCore/: CMakeLists.txt
Engine/Source/GameLauncher/: CMakeLists.txt  gamelauncher_source_files.cmake
Engine/Source/GameSystem/: CMakeLists.txt  gamesystem_private_files.cmake
Engine/Source/ResourceCompiler/: CMakeLists.txt  resourcecompiler_source_files.cmake
Engine/Source/Sandbox/: CMakeLists.txt  sandbox_public_files.cmake
Engine/Source/ScriptCore/: CMakeLists.txt  scriptcore_source_files.cmake
Engine/Source/System/: CMakeLists.txt
Engine/Source/VulkanRHI/: CMakeLists.txt  vulkanrhi_private_files.cmake  vulkanrhi_public_files.cmake
Engine/Source/VulkanSandbox/: CMakeLists.txt  vulkansandbox_private_files.cmake
Engine/Source/WidgetSandbox/: CMakeLists.txt
Engine/Styles/: CMakeLists.txt  Style.css
Engine/include/: ApplicationBase.h  Engine.h  EngineDefs.h
Engine/include/IO/: Directories.h  FileIO.h  FileManager.h
Engine/include/Rendering/: EngineFactoryVk.h  IBuffer.h  IDeviceContext.h  IDeviceObject.h  IEngineContext.h  IGraphicsPipelineState.h  IRenderContext.h  IShader.h  IShaderResourceBinding.h  ISwapChain.h  ITexture.h  ITextureView.h  Types.h
Engine/src/: ApplicationBase.cpp  Engine.cpp  EngineInternal.h
Engine/src/IO/: Directories.cpp  FileIO.cpp  FileManager.cpp
Engine/src/Rendering/: BufferVk.cpp  BufferVk.h  DeviceContextVk.cpp  DeviceContextVk.h  EngineContextVk.cpp  EngineContextVk.h  EngineFactoryVk.cpp  GraphicsPipelineStateVk.cpp  GraphicsPipelineStateVk.h  RenderContextVk.cpp  RenderContextVk.h  ShaderVk.cpp  ShaderVk.h  SwapChainVk.cpp  SwapChainVk.h
RunnerTest/: CMakeLists.txt  Shaders.cmake
RunnerTest/shaders/: shader.frag  shader.vert  shader2.glsl  shader2.hlsl  shader3.glsl  shader_frag.spv  shader_vert.spv
RunnerTest/src/: main.cpp
Tools/: CMakeLists.txt  FindVulkan (Modified).cmake
Tools/AssetImporter/: CMakeLists.txt  assetimporter_sources.cmake
Tools/AssetImporter/Sources/: Main.cpp
Tools/AssetProcessor/: CMakeLists.txt  assetprocessor_source_files.cmake
Tools/AssetProcessor/Source/: AssetProcessor.cpp  AssetProcessor.h  Main.cpp
Tools/AssetProcessor/Tests/: CMakeLists.txt  Main.cpp
Tools/AutoRTTI/: CMakeLists.txt
Tools/AutoRTTI/Source/: AutoRTTI.h  Main.cpp
Tools/CrystalShaderTool/: CMakeLists.txt
Tools/ProjectManager/: CMakeLists.txt  projectmanager_sources.cmake
Tools/ResourceCompiler/: CMakeLists.txt
Tools/ShaderCompiler/: CMakeLists.txt
Tools/VSTools/: Crystal.css-data.json  VSCppSnippets.snippet
(+2488 files in other folders)
