cmake_minimum_required(VERSION 3.20)

project(CoreMedia CXX)

string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWERCASE)

ce_add_target(${PROJECT_NAME} SHARED
    NAMESPACE CE
    FOLDER Engine/Source
    PCHHEADER
        PRIVATE
            Public/${PROJECT_NAME}.h
    FILES_CMAKE
        PRIVATE
            ${PROJECT_NAME_LOWERCASE}_private_files.cmake
        PUBLIC
            ${PROJECT_NAME_LOWERCASE}_public_files.cmake
    INCLUDE_DIRECTORIES
        PRIVATE
            Private/
        PUBLIC
            Public/
    COMPILE_DEFINITIONS
        PRIVATE
            ${PROJECT_NAME}_EXPORTS
    BUILD_DEPENDENCIES
        PRIVATE
            ThirdParty::stb
            ThirdParty::miniz
            $<${PAL_PLATFORM_IS_DESKTOP}:ThirdParty::dxcompiler>
            $<${PAL_PLATFORM_IS_DESKTOP}:ThirdParty::compressonator>
            $<${PAL_PLATFORM_IS_WINDOWS}:d3d11.lib>
            $<${PAL_PLATFORM_IS_WINDOWS}:d3d12.lib>
            $<${PAL_PLATFORM_IS_WINDOWS}:dxgi.lib>
        PUBLIC
            CE::Core
    RUNTIME_DEPENDENCIES
        compressonator
        dxcompiler
)


if(${PAL_TRAIT_BUILD_ENGINE_TESTS_SUPPORTED})
    add_subdirectory(Tests)
endif()

